--- a/index.html
+++ b/index.html
@@ -27,91 +27,22 @@
 
     body {
       font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, Arial;
-      min-height: 100vh;
       color: var(--ink);
       background:
         radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.18), transparent 60%),
         radial-gradient(1000px 500px at 110% 120%, rgba(0,121,255,.20), transparent 60%),
         radial-gradient(800px 400px at -10% 120%, rgba(0,229,255,.12), transparent 60%),
         var(--bg);
+    }
+
+    .hero-wrapper {
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      min-height: 100vh;
+      width: 100%;
     }
 
-    /* Sticky hamburger icon */
-    .menu-toggle {
-      position: fixed;
-      top: 24px;
-      left: 24px;
-      width: 32px;
-      height: 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
-      z-index: 1001;
-    }
-
-    .menu-toggle span {
-      display: block;
-      height: 4px;
-      background-color: var(--neon);
-      border-radius: 2px;
-      transition: transform 0.3s, opacity 0.3s;
-    }
-
-    .menu-toggle.open span:nth-child(1) {
-      transform: translateY(10px) rotate(45deg);
-    }
-    .menu-toggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-    .menu-toggle.open span:nth-child(3) {
-      transform: translateY(-10px) rotate(-45deg);
-    }
-
-    .menu-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(13,18,28,0.95);
-      display: none;
-      z-index: 1000;
-    }
-    .menu-overlay.open {
-      display: block;
-    }
-
-    .menu-list {
-      position: absolute;
-      top: 70px;
-      left: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
-
-    .menu-item {
-      padding: 12px 24px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: 700;
-      color: #001219;
-      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
-      text-decoration: none;
-      transition: transform 0.2s, box-shadow 0.2s;
-      white-space: nowrap;
-    }
-    .menu-item:hover {
-      transform: translateY(-2px);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,.5) inset,
-        0 10px 26px rgba(0,183,255,.45),
-        0 0 80px rgba(0,229,255,.25);
-    }
-
-    /* The hero / landing container (should match your original) */
     .container {
       width: min(760px, 92vw);
       background: linear-gradient(180deg, rgba(13,18,28,.7), rgba(9,14,22,.6));
@@ -124,6 +55,7 @@
         0 30px 80px rgba(0,0,0,.6),
         0 0 120px rgba(0,229,255,.12);
       text-align: center;
+      margin: auto;
     }
 
     .hero-logo {
@@ -137,6 +69,7 @@
         drop-shadow(0 0 40px rgba(0,183,255,.18));
       animation: float 4s ease-in-out infinite;
     }
+
     @keyframes float {
       50% { transform: translateY(-6px); }
     }
@@ -180,6 +113,7 @@
         0 0 60px rgba(0,229,255,.18);
       transition: .2s transform, .2s box-shadow, .2s filter;
     }
+
     .link-btn:hover {
       transform: translateY(-2px) scale(1.02);
       box-shadow:
@@ -188,6 +122,7 @@
         0 0 80px rgba(0,229,255,.25);
       filter: saturate(1.1);
     }
+
     .link-btn svg {
       width: 20px;
       height: 20px;
@@ -211,16 +146,92 @@
       justify-content: center;
       text-align: center;
     }
+
     .section h2 {
       font-size: 32px;
       margin-bottom: 20px;
       text-shadow: 0 0 10px rgba(0,229,255,.2);
     }
+
     .section p {
       max-width: 60ch;
       font-size: 18px;
       line-height: 1.6;
       color: #c5f6ff;
+    }
+
+    .menu-toggle {
+      position: fixed;
+      top: 24px;
+      left: 24px;
+      width: 32px;
+      height: 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-toggle span {
+      display: block;
+      height: 4px;
+      background-color: var(--neon);
+      border-radius: 2px;
+      transition: transform 0.3s, opacity 0.3s;
+    }
+
+    .menu-toggle.open span:nth-child(1) {
+      transform: translateY(10px) rotate(45deg);
+    }
+
+    .menu-toggle.open span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-toggle.open span:nth-child(3) {
+      transform: translateY(-10px) rotate(-45deg);
+    }
+
+    .menu-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(13,18,28,0.95);
+      display: none;
+      z-index: 1000;
+    }
+
+    .menu-overlay.open {
+      display: block;
+    }
+
+    .menu-list {
+      position: absolute;
+      top: 70px;
+      left: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .menu-item {
+      padding: 12px 24px;
+      border-radius: 12px;
+      font-size: 18px;
+      font-weight: 700;
+      color: #001219;
+      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
+      text-decoration: none;
+      transition: transform 0.2s, box-shadow 0.2s;
+      white-space: nowrap;
+    }
+
+    .menu-item:hover {
+      transform: translateY(-2px);
+      box-shadow:
+        0 0 0 1px rgba(255,255,255,.5) inset,
+        0 10px 26px rgba(0,183,255,.45),
+        0 0 80px rgba(0,229,255,.25);
     }
 
     @media (max-width: 600px) {
@@ -230,22 +241,14 @@
   </style>
 </head>
 <body>
-  <!-- Hamburger icon -->
+
+  <!-- Hamburger menu -->
   <div class="menu-toggle" id="menuToggle">
     <span></span>
     <span></span>
     <span></span>
   </div>
-  .hero-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 32px;
-}
 
-
-  <!-- Overlay for menu items -->
   <div class="menu-overlay" id="menuOverlay">
     <div class="menu-list">
       <a href="#" class="menu-item" id="menu-home">Home</a>
@@ -257,37 +260,23 @@
     </div>
   </div>
 
-  <!-- Landing / hero -->
+  <!-- Landing section -->
   <main class="hero-wrapper">
-  <div class="container" id="top">
-    ...
-  </div>
-</main>
+    <div class="container" id="top">
+      <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
+      <h1>NUT | M.R. Notenboom</h1>
+      <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
 
-    <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
-    <h1>NUT | M.R. Notenboom</h1>
-    <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
+      <div class="links">
+        <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">Email</a>
+        <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">Twitter</a>
+      </div>
 
-    <div class="links">
-      <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
-        Email
-      </a>
-      <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
-        LinkedIn
-      </a>
-      <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.3 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
-        GitHub
-      </a>
-      <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
-        Twitter
-      </a>
+      <p class="footer">The AI era is here, welcome to the adventure ✨</p>
     </div>
-    <p class="footer">The AI era is here, welcome to the adventure ✨</p>
-  </div>
+  </main>
 
   <!-- Sections -->
   <section class="section" id="what-is-ai">
@@ -311,6 +300,7 @@
     <p>Start small: use existing tools, learn prompts, experiment, build step by step.</p>
   </section>
 
+  <!-- Script for menu toggle and smooth scroll -->
   <script>
     (function(){
       const menuToggle = document.getElementById('menuToggle');
@@ -332,7 +322,6 @@
 
       menuItems.forEach(item => {
         item.addEventListener('click', (e) => {
-          // Close menu
           menuToggle.classList.remove('open');
           menuOverlay.classList.remove('open');
 
@@ -340,7 +329,6 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
             e.preventDefault();
           }
-          // For others, default anchor scroll will work
         });
       });
     })();
