--- a/index.html
+++ b/index.html
@@ -25,31 +25,93 @@
       scroll-behavior: smooth;
     }
 
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
-
     body {
       font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, Arial;
+      min-height: 100vh;
       color: var(--ink);
       background:
         radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.18), transparent 60%),
         radial-gradient(1000px 500px at 110% 120%, rgba(0,121,255,.20), transparent 60%),
         radial-gradient(800px 400px at -10% 120%, rgba(0,229,255,.12), transparent 60%),
         var(--bg);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      display: block;
     }
 
-    /* Hero wrapper that ensures vertical centering */
+    .menu-toggle {
+      position: fixed;
+      top: 24px;
+      left: 24px;
+      width: 32px;
+      height: 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-toggle span {
+      display: block;
+      height: 4px;
+      background-color: var(--neon);
+      border-radius: 2px;
+      transition: transform 0.3s, opacity 0.3s;
+    }
+
+    .menu-toggle.open span:nth-child(1) {
+      transform: translateY(10px) rotate(45deg);
+    }
+    .menu-toggle.open span:nth-child(2) {
+      opacity: 0;
+    }
+    .menu-toggle.open span:nth-child(3) {
+      transform: translateY(-10px) rotate(-45deg);
+    }
+
+    .menu-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(13,18,28,0.95);
+      display: none;
+      z-index: 1000;
+    }
+
+    .menu-overlay.open {
+      display: block;
+    }
+
+    .menu-list {
+      position: absolute;
+      top: 70px;
+      left: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .menu-item {
+      padding: 12px 24px;
+      border-radius: 12px;
+      font-size: 18px;
+      font-weight: 700;
+      color: #001219;
+      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
+      text-decoration: none;
+      transition: transform 0.2s, box-shadow 0.2s;
+      white-space: nowrap;
+    }
+
+    .menu-item:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 0 0 1px rgba(255,255,255,.5) inset, 0 10px 26px rgba(0,183,255,.45), 0 0 80px rgba(0,229,255,.25);
+    }
+
     .hero-wrapper {
-      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      padding: 32px;
     }
 
     .container {
@@ -59,12 +121,8 @@
       padding: 24px 40px 56px;
       position: relative;
       overflow: hidden;
-      box-shadow:
-        0 0 0 1px rgba(0,229,255,.25) inset,
-        0 30px 80px rgba(0,0,0,.6),
-        0 0 120px rgba(0,229,255,.12);
+      box-shadow: 0 0 0 1px rgba(0,229,255,.25) inset, 0 30px 80px rgba(0,0,0,.6), 0 0 120px rgba(0,229,255,.12);
       text-align: center;
-      margin: auto;
     }
 
     .hero-logo {
@@ -73,11 +131,10 @@
       display: block;
       margin: 12px auto 8px;
       object-fit: contain;
-      filter:
-        drop-shadow(0 0 18px rgba(0,229,255,.45))
-        drop-shadow(0 0 40px rgba(0,183,255,.18));
+      filter: drop-shadow(0 0 18px rgba(0,229,255,.45)) drop-shadow(0 0 40px rgba(0,183,255,.18));
       animation: float 4s ease-in-out infinite;
     }
+
     @keyframes float {
       50% { transform: translateY(-6px); }
     }
@@ -104,6 +161,7 @@
       gap: 14px;
       justify-content: center;
     }
+
     .link-btn {
       display: inline-flex;
       align-items: center;
@@ -114,20 +172,16 @@
       text-decoration: none;
       font-weight: 700;
       background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
-      box-shadow:
-        0 0 0 1px rgba(0,229,255,.35) inset,
-        0 8px 24px rgba(0,183,255,.35),
-        0 0 60px rgba(0,229,255,.18);
+      box-shadow: 0 0 0 1px rgba(0,229,255,.35) inset, 0 8px 24px rgba(0,183,255,.35), 0 0 60px rgba(0,229,255,.18);
       transition: .2s transform, .2s box-shadow, .2s filter;
     }
+
     .link-btn:hover {
       transform: translateY(-2px) scale(1.02);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,.5) inset,
-        0 10px 26px rgba(0,183,255,.45),
-        0 0 80px rgba(0,229,255,.25);
+      box-shadow: 0 0 0 1px rgba(255,255,255,.5) inset, 0 10px 26px rgba(0,183,255,.45), 0 0 80px rgba(0,229,255,.25);
       filter: saturate(1.1);
     }
+
     .link-btn svg {
       width: 20px;
       height: 20px;
@@ -151,83 +205,18 @@
       justify-content: center;
       text-align: center;
     }
+
     .section h2 {
       font-size: 32px;
       margin-bottom: 20px;
       text-shadow: 0 0 10px rgba(0,229,255,.2);
     }
+
     .section p {
       max-width: 60ch;
       font-size: 18px;
       line-height: 1.6;
       color: #c5f6ff;
-    }
-
-    .menu-toggle {
-      position: fixed;
-      top: 24px;
-      left: 24px;
-      width: 32px;
-      height: 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
-      z-index: 1001;
-    }
-    .menu-toggle span {
-      display: block;
-      height: 4px;
-      background-color: var(--neon);
-      border-radius: 2px;
-      transition: transform 0.3s, opacity 0.3s;
-    }
-    .menu-toggle.open span:nth-child(1) {
-      transform: translateY(10px) rotate(45deg);
-    }
-    .menu-toggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-    .menu-toggle.open span:nth-child(3) {
-      transform: translateY(-10px) rotate(-45deg);
-    }
-
-    .menu-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(13,18,28,0.95);
-      display: none;
-      z-index: 1000;
-    }
-    .menu-overlay.open {
-      display: block;
-    }
-
-    .menu-list {
-      position: absolute;
-      top: 70px;
-      left: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
-    .menu-item {
-      padding: 12px 24px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: 700;
-      color: #001219;
-      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
-      text-decoration: none;
-      transition: transform 0.2s, box-shadow 0.2s;
-      white-space: nowrap;
-    }
-    .menu-item:hover {
-      transform: translateY(-2px);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,.5) inset,
-        0 10px 26px rgba(0,183,255,.45),
-        0 0 80px rgba(0,229,255,.25);
     }
 
     @media (max-width: 600px) {
@@ -237,7 +226,7 @@
   </style>
 </head>
 <body>
-  <!-- Hamburger toggle -->
+
   <div class="menu-toggle" id="menuToggle">
     <span></span>
     <span></span>
@@ -255,25 +244,21 @@
     </div>
   </div>
 
-  <!-- Hero / Landing -->
   <main class="hero-wrapper">
     <div class="container" id="top">
       <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
       <h1>NUT | M.R. Notenboom</h1>
       <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
-
       <div class="links">
         <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">Email</a>
         <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">GitHub</a>
         <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">Twitter</a>
       </div>
-
       <p class="footer">The AI era is here, welcome to the adventure ✨</p>
     </div>
   </main>
 
-  <!-- Content Sections -->
   <section class="section" id="what-is-ai">
     <h2>What is AI?</h2>
     <p>Artificial Intelligence (AI) refers to the simulation of human intelligence by machines — learning, reasoning, adaptation.</p>
@@ -326,5 +311,6 @@
       });
     })();
   </script>
+
 </body>
 </html>
